aws_instance.tf
resource "aws_instance" "web" {
  ami                           =   data.aws_ami.ubuntu.id
  instance_type                 =   "t3.micro"
  subnet_id                     =   aws_subnet.public.id
  associate_public_ip_address   =   "true"
  user_data                     =   file("./script.sh")
  key_name                      =   "aws-class-2"
  security_groups               =   [aws_security_group.WebServer.id,]

  tags = {
    Name = "WebServer"
  }
}
